samples/_failures_safe/1761137832_2c5414_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24a86bb6.c: In function ‘main’:
./samples/SAFE/__tmp_24a86bb6.c:164:9: error: expected ‘;’ at end of input
  164 |     free
      |         ^
      |         ;
./samples/SAFE/__tmp_24a86bb6.c:164:5: error: expected declaration or statement at end of input
  164 |     free
      |     ^~~~
